<resources>
    <string name="app_name">MyNetflixClone</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="netflix">netflix</string>
    <string name="submit">submit</string>
    <string name="checkBox">Remember username and password</string>
    <string name="description">After half of all life is snapped away by Thanos, the Avengers are left scattered and divided. Now with a way to reverse the damage, the Avengers and their allies must assemble once more and learn to put differences aside in order to work together and set things right.</string>
    <string name="movie_name">Avenger: Endgame</string>
    <string name="duration">%d minutes</string>
    <string name="greeting">Hello! %s</string>
</resources>