<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".movie.MovieDetailFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        android:src="@drawable/endgame"
        app:layout_constraintDimensionRatio="w,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helloUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backgroundText"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Hey! User" />

    <ImageButton
        android:id="@+id/buttonClose"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/selector_background_circle"
        android:padding="28dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/movie_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvMovieName"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:text="play"
        android:textColor="@color/black"
        app:icon="@drawable/ic_play_arrow"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDuration" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDownload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="@color/backgroundTextPressed"
        android:text="download"
        android:textColor="@color/white"
        app:icon="@drawable/ic_download"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btnDownload"
        app:layout_constraintStart_toStartOf="@+id/btnDownload"
        app:layout_constraintTop_toBottomOf="@+id/btnDownload" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tvDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="My List"
            android:textAllCaps="false"
            app:icon="@drawable/ic_add"
            app:iconGravity="textTop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="Rate"
            android:textAllCaps="false"
            app:icon="@drawable/ic_thumb_up"
            app:iconGravity="textTop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="Share"
            android:textAllCaps="false"
            app:icon="@drawable/ic_share"
            app:iconGravity="textTop" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>